Adding map example

--- a/modules/custom/d3vis/templates/d3vis.html.twig
+++ b/modules/custom/d3vis/templates/d3vis.html.twig
@@ -49,6 +49,8 @@
   {{ title_suffix }}
   {% block content %}
     {{ content }}
-    <div id="d3vis-container" />
+    <div id="d3vis-container"></div>
+
+    <div id="d3map-container"></div>
   {% endblock %}
 </div>
